uptime/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime
  annotations:
    linkerd.io/inject: enabled
