uptime/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:debian
        resources:
         requests:
           memory: "64Mi"
           cpu: "250m"
         limits:
           memory: "128Mi"
           cpu: "500m"
        ports:
        - containerPort: 3001
        volumeMounts:
          - mountPath: "/app/data"
            name: uptime-data
      volumes:
        - name: uptime-data
          persistentVolumeClaim:
            claimName: uptime-data
