uptime/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`uptime.claytonc.dev`)
    kind: Rule
    services:
    - name: uptime-kuma
      port: 80
  tls:
    secretName: uptime-tls
